# GremLinEqRe

./: .gitignore  CMakeLists.txt  README.md
docs/: 01_KerrGeometry.md  02_MST_Solver.md
include/: Clebsch.h  KerrGeo.h  SWSH.h  SWSH_LRR.h  TeukolskyRadial.h  TeukolskySource.h
python/: bindings.cpp
src/: Clebsch.cpp  KerrGeo.cpp  SWSH.cpp  SWSH_LRR.cpp  TeukolskyRadial.cpp  TeukolskySource.cpp
tests/: debug_eq113_residual.py  debug_inspiral.py  debug_radial_errors_v2.py  test_SWSH_jl.py  test_SWSH_spectral.py  test_amplitudes.py  test_circular_amplitudes_full.py  test_debug_radial.py  test_hyp2f1_compare.py  test_inspiral.py  test_kerr_geo.py  test_kinematics_check.py  test_mst.py  test_multimodes.py  test_nu_solver.py  test_radial_eval.py  test_radial_function.py  test_radial_matching.py  test_smooth_matching.py  test_source_integration.py  test_swsh_evaluation.py  test_swsh_lrr_cpp_vs_julia.py  test_swsh_table_x.py  test_teukolsky_radial.py  test_waveform.py  test_waveform_generation.py
